--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(":service")
     compile project(":core")
 
     testCompile 'junit:junit:4.12'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.android.support:recyclerview-v7:23.2.1'
 }
 buildscript {
     ext.kotlin_version = '1.0.1-2'
