--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,12 +1,17 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(":data")
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.google.code.gson:gson:2.4'
+    compile 'org.apache.httpcomponents:httpcore:4.3.2'
+    compile 'commons-codec:commons-codec:1.9'
 
     testCompile 'junit:junit:4.10'
 }
@@ -23,6 +28,7 @@ repositories {
     mavenCentral()
 }
 sourceSets {
+    main.java.srcDirs += 'src/main/java'
     main.java.srcDirs += 'src/main/kotlin'
     test.java.srcDirs += 'src/test/kotlin'
     test {}
