--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -27,9 +27,17 @@ dependencies {
     compile project(":data")
 
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile 'com.facebook.fresco:fresco:0.9.0+'
+    compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
+
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:gridlayout-v7:23.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
+
 }
 buildscript {
     ext.kotlin_version = '1.0.1-2'
